--- a/src/assets/styles/_css-variables.scss
+++ b/src/assets/styles/_css-variables.scss
@@ -1,4 +1,4 @@
-$primaryColor: #6200EE;
+$primaryColor: #16394c;
 $primaryVariantColor: #3700B3;
 $secondaryColor: #03CAD5;
 $secondaryVariantColor: #74e1ea;
@@ -6,11 +6,13 @@ $lightBlueColor: #4446cc;
 $steel600Color: #647582;
 $steel500Color: #565555;
 $steel200Color: #b9b9b9;
-$steel100Color: #d7d7d7;
+$steel100Color: #e5e5e5;
 $steelColor: #f0f0f0;
 $whiteColor: #fff;
 
 $base-font-size: 16;
 
 $DESKTOP_MIN_WIDTH:768;
+
+$TABLET_MIN_WIDTH: 480;
 
