Change: Weather card Css

--- a/src/app/pages/home/home/home.component.html
+++ b/src/app/pages/home/home/home.component.html
@@ -1,5 +1,5 @@
 <app-home-header
-  [city]="city"
+  [searchCity]="searchCity"
   [spinner]="spinner"
   [weatherData]="weatherData"
   (cityName)="onGetWeatherData($event)"></app-home-header>
