--- a/src/app/pages/home/home/weather-search/weather-search.component.html
+++ b/src/app/pages/home/home/weather-search/weather-search.component.html
@@ -2,7 +2,7 @@
   <div>search location here</div>
 
   <div class="search">
-    <input type="text" placeholder="city" [(ngModel)]="city">
+    <input type="text" placeholder="city" [(ngModel)]="searchCity">
     <div class="submit" (click)="onClick()"></div>
   </div>
 </div>
