--- a/src/app/pages/home/home/weather-card/weather-card.component.scss
+++ b/src/app/pages/home/home/weather-card/weather-card.component.scss
@@ -33,3 +33,10 @@
   font-size: rem(20);
   color: $primaryColor;
 }
+
+
+@include mediaDesktop() {
+  .card-wrapper{
+    padding: rem(18) rem(12) rem(18) rem(40)
+  }
+}
