--- a/src/app/pages/home/home/home.component.html
+++ b/src/app/pages/home/home/home.component.html
@@ -2,7 +2,7 @@
   [searchCity]="searchCity"
   [spinner]="spinner"
   [weatherData]="weatherData"
-  (cityName)="onGetWeatherData($event)"></app-home-header>
+  (selectedCity)="onGetWeatherData($event)"></app-home-header>
 
 <ui-loading *ngIf="spinner"></ui-loading>
 
